[project]
name = "pyperunner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Konstantinos Dimos", email = "konstadimos7@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
