[project]
name = "pyperunner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Konstantinos Dimos", email = "konstadimos7@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.9",
    "sqlalchemy>=2.0.43",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
